# dental-scraper

./: .gitignore  README.md  pyproject.toml
api/: auth.py  main.py  models.py  websocket.py
scraper/: items.py  pipelines.py  settings.py  utils.py
scraper/spiders/: dental_scraper.py
