[tool.poetry]
name = "dental-scraper"
version = "0.1.0"
description = ""
authors = ["Rohan <rohanya.76426@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.12.0"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
aiohttp = "^3.11.4"
redis = "^5.2.0"
aiofiles = "^24.1.0"
websockets = "^14.1"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
